# batchi-rs

./: Cargo.toml  README.md
crates/batchi/: Cargo.toml
crates/batchi/src/: batchi.rs  job.rs  lib.rs
example/: Cargo.toml
example/src/: main.rs
