[workspace]
resolver = "2"

members = ["crates/batchi", "example"]

[workspace.package]
name = "batchi"
version = "0.1.0"
edition = "2021"
rust-version = "1.80"
authors = ["Tim Burrows <tburrows90@gmail.com>"]
repository = "https://github.com/timburrows/batchi_rs"

[workspace.dependencies]
batchi = { path = "crates/batchi" }
